--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         <input type="checkbox" id="includeUppercase" />
 
         <label for="includeNumbers"> Include Numbers</label>
-        <input type="checkbox" id="includeUppercase" />
-
+        <input type="checkbox" id="includeNumbers" />
+//line 42 changed id from includeUppercase to includeNumbers//
+        
+        
         <label for="includeSymbols"> Include Symbols</label>
         <input type="checkbox" id="includeSymbols" />
 
